--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "sunjs",
-    "file": "sun",
+    "name" : "sunjs",
+    "file" : "sun",
     "version" : "0.1.0",
     "devDependencies" : {
         "grunt" : "~0.4.1",
-        "grunt-contrib-uglify": "~0.2.0"
+        "grunt-contrib-uglify" : "~0.2.0",
+        "grunt-contrib-jshint" : "^0.10.0"
     }
 }
-
